# pad_extract_poc_bulk

./: Cargo.toml
src/: main.rs
